--- a/src/App.css
+++ b/src/App.css
@@ -63,6 +63,7 @@ header {
 .footer {
     display: flex;
     justify-content: space-between;
-    padding-left: 10px;
-    padding-right: 20px;
+    padding-left: 30px;
+    padding-right: 30px;
+    padding-bottom: 10px;
 }
